# EasyLLMOps

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  README.mdx  cluster.sh  cluster_config.sh  docker-compose-jenkins.yaml
api/: .dockerignore  Dockerfile  Makefile  docker-compose-lite.yaml  docker-compose-mac.yaml  docker-compose.yaml  entrypoint.sh  exception.py  pyproject.toml
api/docker/: Dockerfile
api/litellm/: litellm_config.yaml  test.py
api/notebook/: PoC_01.ipynb
api/promptalchemy/configs/: prompt_loader.py
api/promptalchemy/constants/: path_config.py
api/promptalchemy/constants/prompts/: enhance_prompt.py
api/promptalchemy/schemas/: prompt_schema.py
api/src/: __init__.py  dependencies.py  interfaces.py  main.py  middleware.py  settings.py
api/src/callbacks/: track_cost.py
api/src/chat_completion/: conversation_handler.py
api/src/configs /: prompt_loader.py
api/src/configs/litellm_config/: __init__.py  litellm_config.yaml
api/src/configs/prompt_config/: prompt_loader.py
api/src/configs/prompt_config/prompts/: chain_of_thought_prompt.py  enhance_prompt.py  few_shot_prompt.py  structure_output_prompt.py
api/src/constants/: path_config.py
api/src/llms/: base.py  litellm.py
api/src/routers/: __init__.py  completion.py  conversation.py  generate.py  promptalchemy.py
api/src/schemas/: prompt_schema.py
api/tests/test_routers/: test_completion_api.py
deployments/ELK/: elastic.expanded.yaml  elk.helmfile.yaml  filebeat.expanded.yaml  kibana.expanded.yaml  kube-logging.txt  logstash.expanded.yaml  run.sh
deployments/infrastructure/: role.yaml  rolebinding.yaml
deployments/litellm/: Chart.yaml  values.yaml
deployments/monitoring/: kube-prometheus-stack.expanded.yaml
deployments/monitoring/kube-prometheus-stack/: Chart.yaml
deployments/nginx-ingress/: values.yaml
deployments/promptalchemy/: .helmignore  Chart.yaml  README.md  values.yaml
deployments/promptalchemy/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  nginx-ingress.yaml  secret.yaml  service.yaml
deployments/redis/: values.yaml
helm_charts/promptalchemy/: README.md
helm_charts/promptalchemy/templates/: NOTES.txt  deployment.yaml  service.yaml
iac/ansible/: inventory
iac/ansible/deploy_jenkins/: create_compute_instance.yaml  deploy_jenkins.yaml
iac/terraform/: README.md  main.tf  outputs.tf  variables.tf
jenkins/: Dockerfile  docker-compose-jenkins.yaml
legacy/BE/: Dockerfile  Makefile  README.md  docker-compose-lite.yaml  docker-compose-mac.yaml  docker-compose.yaml  litellm_config.yaml  poetry.toml  pyproject.toml
legacy/BE/src/: dependencies.py  main.py  utils.py
legacy/BE/src/chat_completion/: __init__.py  chat_completion.py  conversation_handler.py  prompt_enhancer.py
legacy/BE/src/configs/path_config/: __init__.py
legacy/BE/src/configs/prompt_config/: __init__.py  prompt_loader.py
legacy/BE/src/configs/prompt_config/prompts/: few_shot_prompt.py  structure_output_prompt.py
legacy/BE/src/schemas/: prompt_schema.py
legacy/BE/tests/test_routers/: test_completion_api.py
legacy/FE/gradio/: gradio_app.py
legacy/FE/promptalchemy-ui/: .gitignore  Makefile  package-lock.json  package.json
legacy/FE/promptalchemy-ui/src/: App.js  ChatInput.js  LandingPage.js  SettingsPanel.js  TypingIndicator.js  useChat.js
monitoring/alertmanager/: config.yml
monitoring/grafana/config/: dashboards.yaml  datasources.yaml
monitoring/prometheus/config/: alert-rules.yml  prometheus.yml
open-webui/: .gitignore  Dockerfile  docker-compose.yaml  package.json
open-webui/kubernetes/manifest/base/: webui-deployment.yaml  webui-ingress.yaml  webui-service.yaml
tests/load_test/: locustfile.py
ui/: gradio_app.py
ui/promptalchemy-ui/: .gitignore  Dockerfile  Makefile  package-lock.json  package.json
ui/promptalchemy-ui/src/: App.js  ChatInput.js  ChatbotUI.js  LandingPage.js  MessageBubble.js  SettingsPanel.js  TypingIndicator.js  useChat.js
